--- a/package.json
+++ b/package.json
@@ -6,14 +6,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "static": "next build && next export"
   },
   "dependencies": {
+    "@capacitor-community/text-to-speech": "^3.0.1",
+    "@capacitor/android": "^5.7.4",
+    "@capacitor/core": "^5.7.4",
+    "@capacitor/ios": "^5.7.4",
+    "@google-cloud/text-to-speech": "^5.2.0",
     "autoprefixer": "10.4.19",
+    "bootstrap": "^5.3.3",
+    "bulma": "^1.0.0",
+    "iron-session": "^8.0.1",
+    "mssql": "^10.0.2",
     "next": "14.1.4",
+    "next-iron-session": "^4.2.0",
     "postcss": "8.4.38",
     "react": "18.2.0",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.5",
+    "rsuite": "^5.59.0",
+    "say": "^0.16.0",
+    "speak-tts": "^2.0.8",
     "tailwindcss": "3.4.3"
+  },
+  "devDependencies": {
+    "@capacitor/cli": "^5.7.4",
+    "typescript": "5.4.5"
   }
 }
